new update || migrations fixed || database side fixed

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=iqP106cqPaM2vdQiB5OMHI6XGEjD7pHm
 
 DB_HOST=localhost
-DB_DATABASE=db_security_agency
+DB_DATABASE=db_cpms
 DB_USERNAME=root
 DB_PASSWORD=''
 
