--- a/.env
+++ b/.env
@@ -17,3 +17,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+PUSHER_APP_ID=245537
+PUSHER_KEY=9da36b84485d66265fbb
+PUSHER_SECRET=55a0ced4fc3e2a6468a1
