--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.1.*",
         "phpmailer/phpmailer": "^5.2",
         "vinkla/pusher": "^2.4",
-        "barryvdh/laravel-dompdf": "^0.7.0"
+        "barryvdh/laravel-dompdf": "^0.7.0",
+        "pusher/pusher-php-server": "2.2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
